Update Sections treee

--- a/data/sections.yaml
+++ b/data/sections.yaml
@@ -6,30 +6,30 @@ sections:
   #- name: 'diagnostics'
   #  title: 'Diagnostics'
   - name: 'mem'
-    title: 'Memory Management'
-  #- name: 'meta'
-  #  title: 'Metaprogramming'
-  - name: 'utilities'
-    title: 'General Utilities'
+    title: 'Memory'
+  - name: 'numerics'
+    title: 'Numerics'
   - name: 'strings'
     title: 'Strings'
+  - name: 'input.output'
+    title: 'Input/Output'
+  - name: 'thread'
+    title: 'Concurrency'
   - name: 'containers'
     title: 'Containers'
+  - name: 'algorithms'
+    title: 'Algorithms'
+  #- name: 'meta'
+  #  title: 'Metaprogramming'
   #- name: 'iterators'
   #  title: 'Iterators'
   #- name: 'ranges'
   #  title: 'Ranges'
-  - name: 'algorithms'
-    title: 'Algorithms'
-  - name: 'numerics'
-    title: 'Numerics'
   #- name: 'time'
   #  title: 'Time'
   #- name: 'localization'
   #  title: 'Localization'
-  - name: 'input.output'
-    title: 'Input/Output'
   - name: 're'
     title: 'Regular Expressions'
-  - name: 'thread'
-    title: 'Concurrency'
+  - name: 'utilities'
+    title: 'Utilities'
