Update content: add std__set.png

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = "https://tastycpp.com/"
 languageCode = 'en-us'
-title = 'Tasty C++'
+title = 'C++ Land'
 
 enableEmoji = true
 disableKinds = ["taxonomy", "taxonomyTerm"]
